k8s/mini/ingress-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 20.120.45.67.nip.io
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: authorization-server
                port:
                  number: 9000
